--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,7 +2,7 @@ body,
 html {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: "League Spartan";
 }
 
 nav ul {
@@ -22,6 +22,10 @@ nav ul li a {
     text-decoration: none;
     color: black;
     padding: 10px;
+}
+
+.navbar-nav {
+    margin-top: 20px !important;
 }
 
 .banner {
