--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -18,6 +18,10 @@ html {
     border-radius: 4px;
     transition: background-color 0.3s ease;
 }
+.navbar-nav {
+    display: flex;
+    gap: 20px;
+}
 
 .nav-link:hover,
 .nav-link.active {
@@ -38,6 +42,10 @@ html {
     padding: 20px;
 }
 
+.navbar-collapse {
+    flex-grow: 0.5;
+}
+
 .login-form {
     background-color: #feecde;
     padding: 40px;
@@ -49,13 +57,16 @@ html {
 
 .form-control {
     background-color: #377081;
-    color: #333;
+    color: #fff;
     border-radius: 5px;
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
 }
 
+input::placeholder {
+    color: #fff !important;
+}
 .btn-primary {
     background-color: #377081;
     border: none;
@@ -83,6 +94,11 @@ html {
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
+
+.navbar-nav {
+    margin-top: 20px !important;
+}
+
 
 .btn-link:hover {
     background-color: #254d59 !important;
