--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -117,7 +117,7 @@ input::placeholder {
 .form-control:focus {
     background-color: #377081; 
     color: #fff;
-    border-color: #66afe9;
+    border-color: #254d59;
     outline: none;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); 
 }
