--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,4 @@
-
-body,
-html {
+body, html {
     font-family: "League Spartan";
     background-color: #ecd1c5;
     color: #333;
@@ -11,20 +9,18 @@ html {
     box-shadow: 0 2px 5px #8e7c74;
 }
 
-.nav-link {
-    padding: 8px 15px;
+.navbar-nav .nav-item .nav-link {
+    padding: 10px 20px; /* Ajusta el padding para cambiar el tamaño */
     background-color: #377081;
     color: #ffffff;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-}
-.navbar-nav {
-    display: flex;
-    gap: 20px;
+    white-space: nowrap; /* Asegura que el texto no se envuelva */
+    text-align: center;
+    margin: 0 5px; /* Espacio entre los botones */
 }
 
-.nav-link:hover,
-.nav-link.active {
+.nav-link:hover, .nav-link.active {
     background-color: #254d59;
     color: #fff;
 }
@@ -42,10 +38,6 @@ html {
     padding: 20px;
 }
 
-.navbar-collapse {
-    flex-grow: 0.5;
-}
-
 .login-form {
     background-color: #feecde;
     padding: 40px;
@@ -56,7 +48,7 @@ html {
 }
 
 .form-control {
-    background-color: #377081;
+    background-color: #648e9b;
     color: #fff;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -67,6 +59,20 @@ html {
 input::placeholder {
     color: #fff !important;
 }
+
+.form-control:active {
+    background-color: #c8e6c9; /* Color de fondo al activar */
+    color: #205723; /* Color de texto al activar */
+}
+
+.form-control:focus {
+    background-color: #8bb4c0; 
+    color: #fff;
+    border-color: #254d59;
+    outline: none;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); 
+}
+
 .btn-primary {
     background-color: #377081;
     border: none;
@@ -75,17 +81,11 @@ input::placeholder {
     box-shadow: 0 2px 4px #8e7c74;
     --bs-btn-hover-bg: #254d59;
     --bs-btn-active-bg: #254d59;
-    display: block;
-    width: 50%;
-    margin: 0 auto;
-}
-.navbar-nav .nav-item {
-    margin-right: 20px;
+    display: block; /* Centra el botón */
+    width: 50%; /* Ajusta el ancho del botón a tu preferencia */
+    margin: 10px auto; /* Centra el botón horizontalmente */
 }
 
-.navbar-nav .nav-item:last-child {
-    margin-right: 0;
-}
 .btn-link {
     background-color: transparent;
     color: #377081;
@@ -94,11 +94,6 @@ input::placeholder {
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
-
-.navbar-nav {
-    margin-top: 20px !important;
-}
-
 
 .btn-link:hover {
     background-color: #254d59 !important;
@@ -109,19 +104,24 @@ input::placeholder {
     padding-top: 50px;
 }
 
-.form-control:active {
-    background-color: #c8e6c9;
-    color: #205723;
+.navbar-nav {
+    display: flex;
+    gap: 20px; /* Espacio entre los elementos de navegación */
 }
 
-.form-control:focus {
-    background-color: #377081; 
-    color: #fff;
-    border-color: #254d59;
-    outline: none;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); 
+.navbar-nav .nav-item {
+    margin-right: 0; /* Elimina el margen derecho */
+}
+
+.navbar-collapse {
+    justify-content: center; /* Centra los elementos de la barra de navegación */
+    flex-grow: 0.5;
 }
 
 .card {
- background-color: #254d59;
+    background-color: #254d59;
+}
+
+dl, ol, ul {
+    margin-top: 20px;
 }
