--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,91 +1,75 @@
-body,
-html {
+body, html {
+    font-family: 'Arial', sans-serif;
+    background-color: #ecd1c5;
+    color: #333;
     margin: 0;
     padding: 0;
-    font-family: "League Spartan";
+}
+
+header, footer {
+    background-color: #feecde;
+    padding: 20px 0;
+    text-align: center;
 }
 
 nav ul {
-    list-style-type: none;
     padding: 0;
-    background-color: #ccc;
-    text-align: center;
-    margin: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 10px;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: black;
-    padding: 10px;
+    color: #377081;
+    background-color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 5px;
 }
 
-.navbar-nav {
-    margin-top: 20px !important;
-}
-
-.banner {
-    background-color: #ddd;
+.banner-area .banner {
+    background-color: #648e9b;
     height: 200px;
-    width: 100%;
+    margin: 20px;
 }
 
-.content .block {
-    background-color: #bbb;
-    margin: 10px;
+.content-area {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+.content-area .content-block {
+    background-color: #9db4c0;
+    flex-grow: 1;
     height: 100px;
+    margin: 10px;
 }
 
-.content .large {
+.content-area .content-block.small {
+    flex-basis: 20%;
+}
+
+.content-area .content-block.large {
+    flex-basis: 100%;
     height: 200px;
 }
 
-.opinions .opinion {
-    background-color: #aaa;
-    width: calc(50% - 20px);
-    margin: 10px;
+.opinion-area {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+}
+
+.opinion-area .opinion {
+    background-color: #c8e6c9;
+    width: 48%;
     height: 100px;
-    display: inline-block;
 }
 
 footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #ccc;
-}
-
-.login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.login-form {
-    background-color: #f8f9fa;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.login-form h2 {
-    color: #333;
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-.login-form .btn-link {
-    color: #254d59;
-    text-decoration: none;
-    padding-left: 0;
-}
-
-.login-image img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
+    background-color: #feecde;
+    padding: 10px 0;
 }
