--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,6 +32,12 @@ nav ul li a {
     background-color: #648e9b;
     height: 200px;
     margin: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 24px;
 }
 
 .content-area {
@@ -43,13 +49,17 @@ nav ul li a {
 
 .content-area .content-block {
     background-color: #9db4c0;
-    flex-grow: 1;
     height: 100px;
     margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 18px;
 }
 
 .content-area .content-block.small {
-    flex-basis: 20%;
+    flex-basis: 48%;
 }
 
 .content-area .content-block.large {
@@ -65,11 +75,25 @@ nav ul li a {
 
 .opinion-area .opinion {
     background-color: #c8e6c9;
-    width: 48%;
+    width: 30%;
     height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #205723;
+    font-size: 18px;
 }
 
 footer {
     background-color: #feecde;
     padding: 10px 0;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.contact-logos span {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 14px;
+    color: #377081;
 }
