--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -101,7 +101,8 @@ input::placeholder {
 }
 
 .container {
-    padding-top: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .navbar-nav {
@@ -124,4 +125,34 @@ input::placeholder {
 
 dl, ol, ul {
     margin-top: 20px;
+}
+
+footer.footer-area {
+    background-color: #feecde;
+    padding: 20px 0;
+    color: #377081;
+    font-size: 16px;
+}
+
+.footer-link {
+    display: block;
+    color: #377081;
+    margin: 10px 0;
+    text-decoration: none;
+}
+
+.footer-link:hover {
+    color: #254d59;
+    text-decoration: underline; /* Opcional, para resaltar el enlace al pasar el ratón */
+}
+
+.contact-logos a {
+    color: #377081;
+    margin: 0 10px;
+    font-size: 24px;
+    text-decoration: none;
+}
+
+.contact-logos a:hover {
+    color: #254d59;
 }
