--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -132,6 +132,7 @@ footer.footer-area {
     padding: 20px 0;
     color: #377081;
     font-size: 16px;
+    box-shadow: 0 0 8px #8e7c74;
 }
 
 .footer-link {
