--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 body, html {
-    font-family: 'Arial', sans-serif;
+    font-family: 'League Spartan', sans-serif;
     background-color: #ecd1c5;
     color: #333;
     margin: 0;
