--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,5 @@
 body, html {
-    font-family: "League Spartan";
+    font-family:  'League Spartan', sans-serif;
     background-color: #ecd1c5;
     color: #333;
 }
@@ -167,7 +167,7 @@ footer.footer-area {
     background-color: #feecde;
     border-radius: 4px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    max-width: 200px; /* Ajusta el ancho del menú desplegable */
+    max-width: 200px;
 }
 
 .dropdown-item {
