--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,6 +1,3 @@
-
-
-/* Estilos para los bloques de contenido */
 .content-block {
     background-color: #feecde;
     border-radius: 10px;
@@ -34,12 +31,50 @@
     
 }
 
-
-.picture-small {
-    margin-bottom: 10px;
+.content-block.large {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 300px;
+    padding: 20px;
     box-shadow: 6px 6px 16px 1px rgba(0, 0, 0, 0.3);
-    height: 250px;
-    width: 590px;
-    margin-left: 50px;
+    width: 100%;
+}
+
+.left-image-container {
+    width: 40%;
+    height: 100%;
+    margin-right: 20px;
     background-color: #377081;
+    border-radius: 10px;
+    box-shadow: 6px 6px 16px 1px rgba(0, 0, 0, 0.3);
+}
+
+.left-image-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.right-content-container {
+ display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+    width: 58%;
+    height: 100%;
+}
+
+.image-container {
+    width: 40%;
+    height: 100%;
+    margin-right: 20px;
+}
+
+.image-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
 }
