--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -13,10 +13,25 @@
     box-shadow: 6px 6px 16px 1px rgba(0, 0, 0, 0.3);
 }
 
+.small-image-container {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: absolute;
+    top: -25px;
+    left: 10px;
+}
+
+.small-image-container img {
+    width: 100%;
+    height: auto;
+}
+
 .content-block.small {
-    height: 100px;
-    margin-bottom: 10px;
-    box-shadow: 6px 6px 16px 1px rgba(0, 0, 0, 0.3);
+    position: relative;
+    height: 150px;
+    padding-top: 50px; /* Espacio para la imagen circular */
 }
 
 @media (min-width: 1200px) {
