--- a/public/css/faqs.css
+++ b/public/css/faqs.css
@@ -6,7 +6,7 @@
 
 .card {
     border: none;
-    box-shadow: 6px 6px 16px 1px rgba(0, 0, 0, 0.3);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     border-radius: 10px;
 }
 
