--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,3 +1,21 @@
+body,
+html {
+    font-family: "League Spartan", sans-serif;
+    background-color: #ecd1c5;
+    color: #333;
+    margin: 0;
+    padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Shrikhand", serif;
+}
+
 .content-block {
     background-color: #feecde;
     border-radius: 10px;
@@ -35,7 +53,11 @@
 }
 
 @media (min-width: 1200px) {
-    .container, .container-lg, .container-md, .container-sm, .container-xl {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
         max-width: none !important;
     }
 }
@@ -43,7 +65,6 @@
 .container {
     padding-top: 0 !important;
     padding-bottom: 0 !important;
-    
 }
 
 .content-block.large {
@@ -72,8 +93,8 @@
 }
 
 .right-content-container {
- display: flex;
-    flex-direction: column; 
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
