--- a/public/css/tienda.css
+++ b/public/css/tienda.css
@@ -116,12 +116,12 @@ h1 {
     margin: 0 5px;
     border-radius: 4px;
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
     border: 1px solid #254d59 !important;
     background-color: #377081 !important;
 }
 
 .bg-white:hover {
-    color: black !important;
+    color: whitesmoke !important;
     background-color: #254d59 !important;
 }
