Cambios en el Diseño y Arreglar Eliminar Lecturas

--- a/public/css/cartas.css
+++ b/public/css/cartas.css
@@ -27,6 +27,7 @@ html {
     padding: 10px 20px;
     font-family: "Shrikhand", serif;
     font-size: 1.5em;
+    text-align: center !important;
 }
 
 .card-body {
