--- a/public/css/ajustes.css
+++ b/public/css/ajustes.css
@@ -27,6 +27,7 @@ html {
     padding: 10px 20px;
     font-family: "Shrikhand", serif;
     font-size: 1.5em;
+    text-align: center;
 }
 
 .card-body {
@@ -39,24 +40,6 @@ html {
 
 label {
     font-weight: bold;
-}
-
-input[type="text"],
-input[type="password"],
-input[type="file"] {
-    width: 100%;
-    padding: 8px;
-    border-radius: 5px;
-    background-color: #648e9b;
-}
-
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="file"]:focus {
-    border-color: #377081;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-        0 0 8px rgba(55, 112, 129, 0.6);
-    outline: none;
 }
 
 .btn-primary,
@@ -103,14 +86,13 @@ input[type="file"]:focus {
     position: relative;
     display: flex;
     align-items: center;
-    background-color: #648e9b;
+    background-color: #f0dcd3;
     border-radius: 5px;
     padding: 10px;
 }
 
 .custom-file-label {
-    color: #fff;
-    background-color: #648e9b;
+    background-color: #f0dcd3;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
@@ -128,7 +110,6 @@ input[type="file"]:focus {
 }
 
 .file-name {
-    color: #fff;
     margin-left: 10px;
     font-size: 1em;
 }
@@ -147,11 +128,17 @@ button:not(:disabled) {
     cursor: pointer;
 }
 .btn-danger {
-    background-color: #377081;
-    border-color: #377081;
+    background-color: #4e1d0e;
+    border-color: #371207;
 }
+
+.btn-danger:hover {
+    background-color: #692915;
+    border-color: #371207;
+}
+
 .btn-danger {
     --bs-btn-active-color: white;
-    --bs-btn-active-bg: #2c5561;
-    --bs-btn-active-border-color: #2c5561;
+    --bs-btn-active-bg: #692915;
+    --bs-btn-active-border-color: #371207;
 }
