--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -3,34 +3,27 @@
     padding-bottom: 20px;
 }
 
-.login-form {
-    background-color: #feecde;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px #8e7c74;
-    margin-top: 20px;
+.h1 {
     text-align: center;
 }
 
 .form-control {
     background-color: #f0dcd3;
-    color: #fff;
     border-radius: 5px;
+    color: black !important;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     border: none;
     padding: 10px;
-    text-align: center;
+    text-align: start !important;
 }
 
-input::placeholder,
-textarea::placeholder {
-    color: #fff !important;
+.form-group.mb-3 {
+    text-align: start !important;
 }
 
 .form-control:focus {
-    background-color: #8bb4c0;
-    color: #fff;
-    border-color: #254d59;
+    background-color: #f0dcd3;
+    border-color: #dabdaf;
     outline: none;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
