--- a/public/css/lecturas.css
+++ b/public/css/lecturas.css
@@ -71,8 +71,7 @@ input[type="file"]:focus {
     width: auto;
 }
 
-.btn-primary:hover,
-.btn-danger:hover {
+.btn-primary:hover {
     background-color: #2c5561;
     border-color: #2c5561;
 }
@@ -146,15 +145,23 @@ element.style {
 button:not(:disabled) {
     cursor: pointer;
 }
+
 .btn-danger {
-    background-color: #377081;
-    border-color: #377081;
+    background-color: #4e1d0e;
+    border-color: #371207;
 }
+
+.btn-danger:hover {
+    background-color: #692915;
+    border-color: #371207;
+}
+
 .btn-danger {
     --bs-btn-active-color: white;
-    --bs-btn-active-bg: #2c5561;
-    --bs-btn-active-border-color: #2c5561;
+    --bs-btn-active-bg: #692915;
+    --bs-btn-active-border-color: #371207;
 }
+
 .card-img {
     margin-left: 10px;
     margin-top: 10px;
