--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -62,3 +62,10 @@ h6 {
     height: 150px;
     border: 3px solid #377081;
 }
+
+.mt-3 {
+    background-color: #254d59 !important;
+}
+.mt-3:hover {
+    background-color: #377081 !important;
+}
