Cambios en los colores

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -23,3 +23,17 @@
     --bs-btn-active-bg: #692915;
     --bs-btn-active-border-color: #371207;
 }
+
+
+.btn-primary {
+    background-color: #377081;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px #8e7c74;
+    --bs-btn-hover-bg: #254d59;
+    --bs-btn-active-bg: #254d59;
+    display: block;
+    width: 50%;
+    margin: 10px auto;
+}
