--- a/public/css/ajustes.css
+++ b/public/css/ajustes.css
@@ -42,10 +42,27 @@ label {
     font-weight: bold;
 }
 
-.btn-primary,
-.btn-danger {
+.btn-primary {
     background-color: #377081;
     border-color: #377081;
+    --bs-btn-hover-bg: #377081;
+    --bs-btn-active-bg: #377081;
+}
+.btn-primary {
+    background-color: #377081;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px #8e7c74;
+    --bs-btn-hover-bg: #254d59;
+    --bs-btn-active-bg: #254d59;
+    display: block;
+    width: 50%;
+    margin: 10px auto;
+}
+
+.btn-primary,
+.btn-danger {
     padding: 10px 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px #8e7c74;
