--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -39,17 +39,24 @@ h6 {
 }
 
 .custom-button {
-    background-color: #377081;
-    color: white;
+    background-color: #f0dcd3;
+    border-color: #b5998b;
     box-shadow: 0 2px 4px #8e7c74;
     font-size: 1.2em;
+    border: none;
     padding: 10px 20px;
     text-align: left;
-    width: 100%;
+    width: 100%;   
+    border-radius: 5px;
+    text-align: center;
+    color: black;
+    --bs-btn-hover-bg: #b5998b;
+    --bs-btn-active-bg: #b5998b;
 }
 
+
 .custom-button:hover {
-    background-color: #254d59;
+    background-color: #b5998b;
 }
 
 .profile-image-container {
@@ -68,4 +75,17 @@ h6 {
 }
 .mt-3:hover {
     background-color: #377081 !important;
+}
+
+.btn-primary {
+    background-color: #377081;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px #8e7c74;
+    --bs-btn-hover-bg: #254d59;
+    --bs-btn-active-bg: #254d59;
+    display: block;
+    width: 50%;
+    margin: 10px auto;
 }
