Css Show lectura arreglado

--- a/public/css/lecturas.css
+++ b/public/css/lecturas.css
@@ -86,6 +86,16 @@ input[type="file"]:focus {
     font-size: 0.875em;
 }
 
+.p-0 {
+    color: #377081;
+    border: none;
+    text-decoration: none;
+}
+
+.p-0:hover {
+    color: #2c5561;
+}
+
 .alert {
     padding: 8px;
     margin-bottom: 10px;
