--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -1,3 +1,22 @@
+body,
+html {
+    font-family: "League Spartan", sans-serif;
+    background-color: #ecd1c5;
+    color: #333;
+    margin: 0;
+    padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Shrikhand", serif;
+    text-align: center;
+}
+
 .container {
     margin-top: 50px;
 }
@@ -15,7 +34,6 @@ h4 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     background-color: #f0dcd3;
     border-color: #b5998b;
     box-shadow: 0 2px 4px #8e7c74;
@@ -38,11 +56,26 @@ h4 {
     margin-bottom: 20px;
 }
 
-#card-element {
+#card-number,
+#card-expiry,
+#card-cvc {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
+}
+
+#postal-code {
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 16px;
+    color: #333;
+}
+
+#postal-code::placeholder {
+    color: #aab7c4;
 }
 
 #card-errors {
@@ -50,7 +83,6 @@ h4 {
     margin-top: 10px;
     font-size: 14px;
 }
-
 
 .btn-primary {
     background-color: #377081;
@@ -63,4 +95,47 @@ h4 {
     display: block;
     width: 50%;
     margin: 10px auto;
+}
+
+.col-md-6 {
+    background-color: #f0dcd3;
+    border-color: #b5998b;
+    box-shadow: 0 2px 4px #8e7c74;
+    padding: 20px;
+}
+
+.compra {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.resumen {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.row .col-md-6 {
+    margin-bottom: 20px;
+}
+
+#resumen-pedido {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+}
+
+@media (min-width: 768px) {
+    .row .col-md-6 {
+        margin-bottom: 0;
+    }
+}
+
+.form-control {
+    box-shadow: none;
 }
