--- a/public/css/showLecturas.css
+++ b/public/css/showLecturas.css
@@ -29,3 +29,10 @@ input[type="text"]:focus {
     outline: none;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
+.card-body {
+    text-align: center;
+}
+.card-body ul {
+    list-style-type: none;
+    padding: 0;
+}
