--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -74,3 +74,24 @@
     width: 50%;
     margin: 10px auto;
 }
+
+.btn-sm {
+    background-color: #377081;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px #8e7c74;
+    --bs-btn-hover-bg: #254d59;
+    --bs-btn-active-bg: #254d59;
+}
+.boton_Anadir {
+    background-color: #377081;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px #8e7c74;
+    --bs-btn-hover-bg: #254d59;
+    --bs-btn-active-bg: #254d59;
+}
